<resources>
    <string name="app_name">חצי</string>
    <string name="hetzi">חצי</string>
    <string name="products">מוצרים</string>
    <string name="login">התחברות</string>
    <string name="logout">התנתקות</string>
    <string name="delete">הסרה</string>
    <string name="shop_page">עמוד עסק</string>
    <string name="shop_name">שם החנות</string>
    <string name="follow">הוסף למועדפים</string>
    <string name="save_changes">שמור שינויים</string>
    <string name="dev_welcome">ברוכים הבאים לגרסת הפיתוח של חצי</string>
    <string name="main_activity">MainActivity</string>
    <string name="quantity">כמות</string>
    <string name="price">מחיר</string>
    <string name="discount">הנחה</string>
    <string name="how_much_time">ולכמה זמן?</string>
    <string name="when">מתי?</string>
    <string name="product_name">שם המוצר</string>
    <string name="publish_offer">פרסם מבצע</string>
    <string name="offer_add">הוספת מבצע</string>
    <string name="shekel">\u20AA</string>
    <string name="add_1_unit">הוסף אחד</string>
    <string name="edit_offer">ערוך מבצע</string>
    <string name="no_offers">אין מבצעים כרגע...</string>
    <string name="to_add">להוספת מבצע לחץ + בתחתית המסך</string>
    <string name="after_discount">אחרי הנחה:</string>
    <string name="total">סה\"כ לתשלום</string>
    <string name="original_total">סכום מקורי</string>
    <string name="you_saved">חסכת</string>
    <string name="oops">אופסי!</string>
    <string name="trans_details">סיכום עסקה</string>
    <string-array name="times_array">
        <item name="time1">00:30</item>
        <item name="time2">01:00</item>
        <item name="time3">01:30</item>
        <item name="time4">02:00</item>
        <item name="time5">02:30</item>
        <item name="time6">03:00</item>
        <item name="time7">03:30</item>
        <item name="time8">04:00</item>
    </string-array>
    <string name="item_must_have_photo">לא לשכוח להוסיף תמונה!</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">2204429249646559</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2204429249646559</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_business_home">BusinessHomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
