<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ProductDetailsPopupActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/details_layout">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/offer_add"
                    android:textSize="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorPrimaryLight"
                    />

                <ImageButton
                    android:id="@+id/product_photo_picker"
                    android:layout_width="match_parent"

                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/baseline_add_a_photo_black_36dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="10dp"
                    >

                    <EditText
                        android:id="@+id/product_name_EditText"

                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        />

                    <TextView
                        android:text="@string/product_name"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:paddingBottom="5dp"

                        android:textSize="20sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="10dp"
                    >

                    <EditText
                        android:id="@+id/quantity_EditText"
                        android:inputType="numberDecimal"

                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        />

                    <TextView
                        android:text="@string/quantity"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:paddingBottom="5dp"

                        android:textSize="20sp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="10dp"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right">

                        <TextView
                            android:text="%"
                            android:textSize="20sp"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:paddingBottom="10dp"
                            />

                        <Spinner
                            android:id="@+id/discount_Spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/discount"
                            android:textSize="20sp"
                            android:paddingBottom="5dp"
                            android:paddingRight="10dp"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right">

                    <EditText
                        android:id="@+id/price_EditText"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:inputType="numberDecimal"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="20sp"
                        android:layout_gravity="bottom"
                        android:paddingBottom="5dp"
                        />

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="10dp"
                    >

                    <Spinner
                        android:id="@+id/time_Spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sale_time"
                        android:textSize="20sp"
                        android:layout_gravity="bottom"
                        android:paddingBottom="10dp"
                        />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    <Button
        android:id="@+id/publish_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/publish_offer"
        android:background="@drawable/discount_button"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        />


</LinearLayout>