<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Shops.EditShopFragment"
    android:id="@+id/frame_layout_fragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/shop_cover_photo_ImageView"
            android:src="@drawable/default_shop_background_photo3"

            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            />

        <ImageView
            android:id="@+id/gradient_ImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:background="@drawable/shape_gradient_bg"
            />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/logo_CircularImageView"
            android:src="@drawable/default_shop_logo"

            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"

            app:civ_border_color="#EEEEEE"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_radius="10"
            app:civ_shadow_color="#9e9e9e"/>

        <ProgressBar
            android:id="@+id/determinateCircleCover"
            style="@android:style/Widget.Holo.ProgressBar.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            />

        <ProgressBar
            android:id="@+id/determinateCircleLogo"
            style="@android:style/Widget.Holo.ProgressBar.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="138dp"
            />

        <EditText
            android:id="@+id/shop_name_EditText"
            android:hint="@string/shop_name"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_CircularImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"

            android:maxLines="1"
            android:inputType="text"

            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:background="@android:color/transparent"
            />

        <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/follow_FancyButton"
        fancy:fb_text="@string/follow"

        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_below="@id/shop_name_EditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"

        fancy:fb_textSize="18dp"
        fancy:fb_textColor="@color/White"
        fancy:fb_defaultColor="@color/colorPrimaryLight"
        fancy:fb_iconResource="@drawable/heart_button_custom"
        fancy:fb_radius="20dp"
        fancy:fb_iconPaddingTop="11.5dp"
        fancy:fb_iconPaddingLeft="5dp"
        fancy:fb_iconPosition="right"
        />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/save_changes_FancyButton"
            fancy:fb_text="@string/save_changes"

            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_below="@id/shop_name_EditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"

            fancy:fb_textSize="16sp"
            fancy:fb_textColor="@color/Black"
            fancy:fb_defaultColor="@color/colorDiscount"
            fancy:fb_iconResource="@drawable/baseline_save_black_48dp"
            fancy:fb_fontIconSize="15dp"
            fancy:fb_radius="20dp"
            fancy:fb_iconPosition="right"
            />

        <ImageView
            android:id="@+id/horizontal_line_1"
            android:background="@drawable/shape_horizontal_line"

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/follow_FancyButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />

        <RelativeLayout
            android:id="@+id/social_LinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_line_1"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            >

            <ImageView
                android:id="@+id/insta_logo_ImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/logo_instagram"

                />

            <TextView
                android:id="@+id/shtrudel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\@"
                android:layout_toRightOf="@id/insta_logo_ImageView"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="5dp"
                />

            <EditText
                android:id="@+id/insta_EditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/shtrudel"
                android:maxLines="1"
                />

            <ImageView
                android:id="@+id/faceoosh_logo_ImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/logo_facebook"
                android:layout_below="@id/insta_logo_ImageView"
                android:maxLines="1"
                android:layout_marginTop="15dp"
                />

            <EditText
                android:id="@+id/facebook_EditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/insta_logo_ImageView"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:layout_toRightOf="@id/faceoosh_logo_ImageView" />

        </RelativeLayout>

        <EditText
            android:id="@+id/shop_address_EditText"
            android:hint="אבן גבירול 34 תל אביב"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/social_LinearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"

            android:background="@android:color/transparent"
            android:textSize="14sp"
            android:maxLines="1"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/shop_site_EditText"
            android:hint="shopwebsite.il"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shop_address_EditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"

            android:background="@android:color/transparent"
            android:textSize="14sp"
            android:maxLines="1"
            android:inputType="textUri"
            />

        <EditText
            android:id="@+id/shop_phonenumber_EditText"
            android:hint="03-6448876"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shop_site_EditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"

            android:background="@android:color/transparent"
            android:textSize="14sp"
            android:maxLines="1"
            android:inputType="phone"
            />

        <ImageView
            android:id="@+id/horizontal_line_3"

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/shop_phonenumber_EditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"

            android:background="@drawable/shape_horizontal_line"
            />

    </RelativeLayout>


</FrameLayout>